--- a/Clase 8 - Programacion funcional/explicacion.Rmd
+++ b/Clase 8 - Programacion funcional/explicacion.Rmd
@@ -7,7 +7,11 @@ output:
 date: ""
 subtitle: Explicación
 ---
+```{r setup,include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
+En esta clase vamos a ver algunas herramientas un poco más avanzadas que sirven para extender el tipo de procesamientos vimos hacia un
 
 ```{r message=FALSE, warning=FALSE}
 library(tidyverse)
@@ -70,6 +74,7 @@ Su funcionamiento es el siguiente:
 
 ```{r}
 if_else(2+2==4, true = "Joya",false = "Error")
+
 ```
 
 ### Funciones
@@ -77,14 +82,18 @@ if_else(2+2==4, true = "Joya",false = "Error")
 La creación de __funciones__ propias nos permite automatizar todas aquellas partes del código que se repiten mucho. Una vez diseñadas, funcionan igual que cualquier comando. 
 
 Por ejemplo, podemos definir la suma de dos elementos como
-
-
 ```{r}
 suma <- function(valor1, valor2) {
   valor1+valor2
 }
 
-suma(5,6)
+
+suma
+```
+En el paso anterior simplemente creamos una función que se guardará en nuestro ambiente como cualquier otro objeto. Para utilizar la función, debemos hacerlo como con cualquier otra, específicandole los argumentos que queremos que tome.
+
+```{r}
+suma(valor1 = 5,valor2 = 6)
 ```
 
 
@@ -106,26 +115,115 @@ Otra_funcion_prueba <- function(parametro1 ,parametro2 = "String default") {
   paste(parametro1, parametro2, sep = " <--> ")
   
 }
+
 Otra_funcion_prueba(parametro1 = "Valor 1 ")
 
 ```
 
 Las funciones que creamos nosotros permanecen en el ambiente de R temporariamente. Cuando removemos los objetos del ambiente, la función deja de existir. Por ende, debemos incorporarla en cada uno de los scripts en la cual la necesitemos. Una buena práctica, es incorporar nuestras funciones útiles al comienzo de cada script junto a la carga de las librerías.                         
 
-Vale mencionar que __lo que ocurre en una función, queda en la función__ excepto que explícitamente pidamos que devuelva el resultado, con el comando `print()`. 
+Vale mencionar que __lo que ocurre en una función, queda en la función__ excepto que explícitamente estemos devolviendo el resultado "en consola". Podemos imprimir pasos intermedios para que se visualicen al correr la función incluyendo el comando `print()`. 
 
-Las funciones siempre devuelven el último objeto que se crea en ellas, o si explicitamente se utiliza el comando `return()`
+Las funciones siempre devuelven el último objeto que se crea en ellas, o si explicitamente se utiliza el comando `return()`.
 
+Para ver esto, voy a diseñar una función que calcule el ratio entre el valor máximo de un vector y el valor mínimo:
+```{r}
+calcula_ratio <- function(vector) {
+  
+vector.max  <-   max(vector)
+vector.min  <-   min(vector)
+
+return(vector.max/vector.min)
+}
+
+```
+
+Al correr una función definida de esta manera, en el ambiente solo se conserva en nuestro objeto **ratio** el valor devuelto con `return()`. *vector.max* y *vector.min* no quedan almacenados.
+```{r}
+ratio <- calcula_ratio(vector = c(1,2,3,4))
+
+ratio
+```
+Ahora bien, cuando pensamos en funciones más complejas cuya operatoria no es tan obvia, pueden agregarse chequeos, y operatorias condicionales con alguna advertencia para que el usuario pueda comprender un error, o tenga mayor noción de qué está haciendo la función.       
+
+Que pasa si el usuario de la función no pasa un vector numérico?
+```{r}
+calcula_ratio(vector = c(1,2,3,4,"H"))
+```
+
+En este caso, podríamos haber seteado un mensaje más amigable que permita al usuario comprender su error.
+```{r}
+calcula_ratio <- function(vector) {
+  
+assertthat::assert_that(is.numeric(vector),
+                        msg = "Ingresa un vector numérico")
+  
+
+vector.max  <-   max(vector)
+vector.min  <-   min(vector)
+
+
+return(vector.max/vector.min)
+}
+
+calcula_ratio(vector = c(1,2,3,4,"H"))
+
+```
+Una vuelta de tuerca más! Qué pasa si dentro del vector tenemos un 0? 
+```{r}
+calcula_ratio(vector = c(1,2,3,4,0))
+```
+Supongamos que queremos que en ese caso nuestra función descarte ese valor, calcule igualmente el ratio, pero dando aviso de ello
+```{r}
+calcula_ratio <- function(vector) {
+  
+assertthat::assert_that(is.numeric(vector),
+                        msg = "Ingresa un vector numérico")
+  
+if(any(vector==0)){
+
+  warning("Hay un cero en tu vector, no lo tomo en cuenta para el calculo")
+  vector <- vector[vector!=0]
+  
+}
+vector.max  <-   max(vector)
+vector.min  <-   min(vector)
+
+
+return(vector.max/vector.min)
+}
+
+```
+Veamos que pasa
+```{r}
+ratio <- calcula_ratio(vector = c(456,78,1232,6565,12,0))
+ratio
+```
+
+Cuando trabajamos con grandes volumenes de información hay formás más potentes para realizar loops, o para aplicar funciones a nuestros datos. Supongamos para ello que tenemos nuestra información almacenada en una lista. En este caso, por simplicidad la creamos sólo con tres vectores, pero como vimos anteriormente una lista podría contener múltiples bases de datos en su interior.
+```{r}
+mi_lista_vectores <- list(
+     Vector1 = c(456,78,1232,6565,12),
+     Vector2 = c(190,78,44,23,11),
+     Vector2 = c(194,4218,142,223,121))
+
+```
 
 
 ### PURRR^[basado en https://jennybc.github.io/purrr-tutorial/ls03_map-function-syntax.html]
 
 MAP es la forma _tidy_ de hacer loops. Además de ser más prolijo el código, es mucho más eficiente.
 
-La función __map__ toma un input, una función para aplicar, y alguna otra cosa (por ejemplo parametros que necesite la función)
+La función __map__ toma un input, una función para aplicar, y opcionalmente alguna otra cosa (por ejemplo parametros que necesite la función)
 
 - map(.x, .f, ...)
 - map(VECTOR_O_LIST_INPUT, FUNCTION_A_APLICAR, OTROS_OPCIONALES)
+
+```{r}
+
+map(mi_lista_vectores, calcula_ratio)
+
+```
 
 
 Usamos __map2__ cuando tenemos que pasar dos input, que se aplican sobre una función:
@@ -133,19 +231,13 @@ Usamos __map2__ cuando tenemos que pasar dos input, que se aplican sobre una fun
 - map2(.x, .y, .f, ...)
 - map2(INPUT_UNO, INPUT_DOS, FUNCTION_A_APLICAR, OTROS_OPCIONALES)
 
-Si tenemos más de dos...
 
-- pmap(.l, .f, ...)
-- pmap(VECTOR_O_LIST_INPUT, FUNCTION_A_APLICAR, OTROS_OPCIONALES)
-
-
-Por ejemplo. Si queremos utilizar la función prueba sobre los datos del dataframe ABC_123
-
-
-
+Por ejemplo. Si queremos utilizar la función prueba sobre los datos del dataframe ABC_123 (Veamos que son ambos objetos)
 
 ```{r}
 ABC_123 <- data.frame(Letras = LETTERS[1:20],Num = 1:20)
+
+ABC_123
 funcion_prueba
 ```
 
@@ -181,7 +273,7 @@ ABC_123 %>%
 ```
 
 
-Si lo que queríamos era que la función nos haga todas las combinaciones de letras y número, entonces lo que necesitamos es pasarle el segúndo parametro como algo _fijo_, poniendolo después de la función. 
+Si lo que queríamos era que la función nos haga todas las combinaciones de letras y número, entonces lo que necesitamos es pasarle el segúndo parametro como algo _fijo_, poniendolo después de la función. Volvemos a la función ``map``
 
 ```{r}
 map(ABC_123$Letras,funcion_prueba,ABC_123$Num)[1:2]
@@ -198,6 +290,11 @@ ABC_123 %>%
 ```
 
 Ahora cada fila tiene un vector de 20 elementos guardado en la columna resultado
+
+Si tenemos más de dos...
+
+- pmap(.l, .f, ...)
+- pmap(VECTOR_O_LIST_INPUT, FUNCION_A_APLICAR, OTROS_OPCIONALES)
 
 
 
@@ -223,35 +320,12 @@ map2_dbl(c(1:10),c(11:20),~.x*.y)
 ```
 
 
-### Walk
-
-Las funciones `Walk` Tienen la misma forma que los `map`, pero se usan cuando lo que queremos iterar no genera una salida, sino que nos interesan los efectos secundarios que generan.
-
-```{r}
-map2(ABC_123$Letras,ABC_123$Num,funcion_prueba)[1:3]
-walk2(ABC_123$Letras,ABC_123$Num,funcion_prueba)
-
-```
-
-```{r}
-
-imprimir_salida <- function(x,y){
-  print(funcion_prueba(x,y))
-}
-
-walk2(ABC_123$Letras,ABC_123$Num,imprimir_salida)
-```
-
-Eso que vemos es el efecto secundario dentro de la función (imprimir)
-
 
 ### Cuando usar estas herramientas?
 
-A lo largo del curso vimos diferentes técnicas para manipulación de datos. En particular, la librería dplyr nos permitía fácilmente modificar y crear nuevas variables, agrupando. Cuando usamos `dplyr` y cuando usamos `purrr`.
+A lo largo del curso vimos diferentes técnicas para manipulación de datos. En particular, la librería dplyr nos permitía fácilmente modificar y crear nuevas variables, agrupando. ¿Cuando usamos `dplyr` y cuando usamos `purrr`?.
 
 - Si trabajamos sobre un DF simple, sin variables anidadas (lo que conocíamos hasta hoy) podemos usar `dplyr`
-- Si queremos trabajar con DF anidados, con cosas que no son DF, o si el resultado de la operación que vamos a realizar a nivel file es algo distinto a un valor único, nos conviene usar `map` y `purrr`
-
-- Las funciones `walk` son útiles por ejemplo para escribir archivos en disco de forma iterativa. Algo que no genera una salida
+- Si queremos trabajar con DF anidados, con cosas que no son DF, o si el resultado de la operación que vamos a realizar a nivel file es algo distinto a un valor único, nos conviene usar `map` y `purrr`.
 
 
