--- a/Clase 8 - Programacion funcional/practica_independiente.Rmd
+++ b/Clase 8 - Programacion funcional/practica_independiente.Rmd
@@ -24,10 +24,21 @@ Crear una **función** que devuelva la sumatoria de los números enteros compren
 
 ```
 
+Crear una **función** que dado un parametro _vector_:
 
-### Ejercicios sobre purrr
+- Imprima (**print()**) la media del vector
+- Devuelva (**return()**) el ratio entre el máximo y mínimo valor de un vector
+- Garantizar que la función sólo opere en caso de que todos los valores del vector índicado sean números positivos.
 
 ```{r}
+
+```
+
+
+### Ejercicios sobre purrr
+`mtcars` es una base de juguete que viene con rbase
+```{r}
+mtcars
 ```
 
 __Ej 1__ Para cada columna de mtcars, calcular la media. Devolver una lista
@@ -42,19 +53,44 @@ __Ej 2__ Hacer lo mismo que en 1, pero devolver un vector nombrado
 
 ```
 
-__Ej 3__ Calcular la media, pero podando el 5% de los valores más altos y bajos
+__Ej 3__ Calcular la media, pero podando el 5% de los valores más altos y bajos. Pista: Tirar el `?mean` para ver si tiene un parametro que permite hacer la poda.
+
+```{r}
+
+
+```
+
+__Ej 4__ 
+0 - Hacer un gráfico de puntos tomando el dataset *mtcars*, para ver la relación entre los valores de las variables disp y mpg 
+```{r}
+
+```
+
+1 - Crear un dataframe *mtcars_cyl_6* que conserve solo los casos donde `cyl == 6`
+```{r}
+
+```
+
+2 - Hacer una función que:
+
+ - Tome como imputs un set de datos y un parámetro denominado "titulo"
+ - Entregue como output un gráfico de puntos con la relación entre las variables disp y mpg, titulado en base al parámetro titulo
 
 ```{r}
 
 ```
 
-__Ej 4__ Dividir el dataset de por la variable cyl como una lista y calcular el numero de filas por elemento de la lista
-
+3 - Probar esta función con el dataset  **mtcars_cyl_6**
 ```{r}
 
 ```
 
-__Ej 5__ Para cada elemento de la lista de _4_, calcular la media de cada columna. Devolver los resultados como un dataframe con un registro por cada elemento de la lista (osea, 3)
+4 - Crear un dataframe **mtcars_nest** que agrupe los datos por la variable *cyl*, para luego crear una nueva variable *grafic* que genere este mismo gráfico para cada uno de los valores de cyl.
+```{r}
+
+```
+
+Exportar a un PDF todos los graficos creados en el paso anterio
 
 ```{r}
 
