--- a/Clase 7 - Strings/Practica_guiada_stringr_lubridate.Rmd
+++ b/Clase 7 - Strings/Practica_guiada_stringr_lubridate.Rmd
@@ -17,6 +17,7 @@ library(tidyverse)
 library(tm)
 library(wordcloud2)
 library(RVerbalExpressions)
+library(lubridate)
 ```
 
 ## Cargamos la base de tweets
@@ -44,6 +45,82 @@ villa_azul_tweets %>%
        title = "Frecuencia de los tweets",
        subtitle = "Intervalos de una hora")+
   scale_x_datetime()
+
+```
+##Lubridate     
+###Extraccion de informacion de la fecha      
+
+El paquete `lubridate` es ideal para trabajar con fechas en R. En primera instancia nos permite extraer muy intuitivamente información cuando contamos con una variable construida como fecha.   
+
+```{r,warning=FALSE}
+villa_azul_fechas <- villa_azul_tweets %>% 
+  mutate(anio      = year(created_at),
+         semestre  = semester(created_at),
+         trimestre = quarter(created_at),
+         mes       = month(created_at),
+         dia.numero= wday(created_at),
+         dia.nombre= wday(created_at, label = TRUE),
+         hora = hour(created_at),
+         minutos = minute(created_at))
+
+```
+
+###Operaciones                 
+
+El paquete tiene una serie de funciones para operar realizando transformaciones sobre las fechas. Tomemos la fecha del primer registro para operar sobre ella: 
+```{r}
+fecha <- villa_azul_fechas$created_at[1]
+fecha
+```
+
+```{r}
+fecha+ days(2) # Le sumo dos días a la fecha
+fecha+ days(2) - hours(3)# Le sumo dos días a la fecha y le resto tres horas
+```
+Importante notar que:         
+
+- Las funciones para **extraer** informacion de las fechas llevan el singular (ej: day,month,hour)
+- Las funciones para **transformar** las fechas llevan el **plural** (ej: days, months,hours)       
+
+###Cambios de formato        
+Suele ocurrir que uno trabaja importando bases de datos donde las variables temporales no traen con el formato necesario para trabjar con fechas en R, o bien el programa no puede codificarlas directametne como fechas. El paquete `lubridate` también tiene una serie de funciones que permiten lidiar con ello.    
+
+Veamos algunos ejemplos    
+```{r}
+ejemplo0 <- "20/05/2020 18:20:40"
+ejemplo1 <- "20/05/2020"
+ejemplo2 <- "20/05/2020 18:20"
+class(ejemplo0)
+
+```
+Hay un set de funciones que siguen la siguiente lógica:          
+Mediante la combinacion de los caracteres **dmy_hms** podemos convertir un string a una fecha, indicando que el formato en que nuestro string tiene la codificada la fecha. En el ejemplo0, es día(d), mes(m), año(y), hora(h), minuto(m) y segundo(s)
+
+ 
+```{r}
+ejemplo0_formateado <- dmy_hms(ejemplo0)
+ejemplo0_formateado
+```
+Que tipo de objeto es ahora *ejemplo0_formateado*?
+```{r}
+class(ejemplo0_formateado)
+```
+Para resolver los otros ejemplos, seguimos la misma lógica. Por ejemplo en el caso 1, solo tenemos day, month, year. Para ello aplicaremos la función **dmy**
+
+```{r}
+ejemplo1_formateado <- dmy(ejemplo1)
+ejemplo1_formateado
+```
+Ejemplo 2:
+```{r}
+ejemplo2_formateado <- dmy_hm(ejemplo2)
+ejemplo2_formateado
+```
+
+Para formatos un poco menos estandarizados, la función parse_date_time nos puede ser útil para transforar una variable.
+```{r}
+dato_importado <- c("Apr-20","May-20","Jun-20") 
+parse_date_time(dato_importado, orders = 'my')
 
 ```
 
