--- a/Modulo 3 - Tidyverse/Clase 3 - Practica independiente - Resuelta.Rmd
+++ b/Modulo 3 - Tidyverse/Clase 3 - Practica independiente - Resuelta.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Introducción a R para Ciencias Sociales. Aplicación práctica en la EPH"
-subtitle: "Clase 3 - Practica Guiada"
+subtitle: "Clase 3 - Practica Independiente"
 date: "20/08/2019"
 output:
   html_notebook:
